--- a/Mafia/Assets/Plugins/Android/launcherTemplate.gradle
+++ b/Mafia/Assets/Plugins/Android/launcherTemplate.gradle
@@ -5,7 +5,10 @@ apply from: '../shared/keepUnitySymbols.gradle'
 dependencies {
     implementation project(':unityLibrary')
     implementation "org.jetbrains.kotlin:kotlin-stdlib:1.5.10"
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'ir.tapsell.plus:tapsell-plus-sdk-unity:1.0.12'
     }
+
 
 android {
     namespace "**NAMESPACE**"
@@ -18,6 +21,8 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
 
     defaultConfig {
